--- a/project/templates/question.html
+++ b/project/templates/question.html
@@ -90,6 +90,15 @@
                     <button type="submit" class="btn btn-primary">Ответить</button>
                 </form>
             </div>
+            <nav aria-label="Page navigation" class="mt-4">
+            <ul class="pagination justify-content-start">
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">...</a></li>
+                <li class="page-item"><a class="page-link" href="#">509</a></li>
+            </ul>
+            </nav>
             
         </div>
         <aside class="w-25 ms-4">
@@ -125,6 +134,7 @@
             </div>
 
         </aside>
+
 
     </main>
     
